--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apptest",
+  "name": "salemapplication",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ui": "~0.2.0-beta.9",
+    "@gorhom/bottom-sheet": "^5.2.8",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.33",
+    "expo-constants": "~18.0.13",
+    "expo-firebase-core": "^6.0.0",
+    "expo-firebase-recaptcha": "^2.3.1",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.9.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-simple-bottom-sheet": "^1.0.4",
+    "react-native-webview": "^13.16.0",
+    "react-native-worklets": "^0.5.1"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0"
+  }
 }
